# vladislav_blog

./: pyproject.toml  requirements.txt  run.py  test.py
flaskblog/: Flask_blog.db  __init__.py  config.py  models.py
flaskblog/main/: routes.py
flaskblog/posts/: routes.py
flaskblog/templates/: home.html  layout.html  login.html  post.html  register.html  reset_request.html  user_posts.html
flaskblog/templates/errors/: 404.html  500.html
flaskblog/users/: forms.py  routes.py  utils.py
vladblog/: Flask_blog.db  __init__.py  forms.py  models.py  routes.py
vladblog/static/: main.css
vladblog/templates/: account.html  create_post.html  home.html  layout.html  login.html  post.html  register.html  reset_token.html  user_posts.html
