[tool.poetry]
name = "vladislav_blog"
version = "0.1.0"
description = ""
authors = ["vlad"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
Flask-WTF = "^0.15.1"
email-validator = "^1.1.3"
peewee = "^3.14.4"
Flask-Bcrypt = "^0.7.1"
Flask-Login = "^0.5.0"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
